--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Ignore node_modules
+node_modules/
+
+# Ignore environment variable files
+.env
+
+# Optional: ignore OS or IDE-specific files
+.DS_Store
+*.log
